change title to djangoware and change favico

--- a/www/templates/base/gist/bd_hdr_menu.html
+++ b/www/templates/base/gist/bd_hdr_menu.html
@@ -1,7 +1,7 @@
 <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-inner">
         <div class="container">
-            <a id="logo" class="brand" href="/" rel="tooltip" data-placement="bottom" data-original-title="{{SITE_TITLE}}"><span class="lightgreen">Djan</span><span class="lightorange">guru</span></a>
+            <a id="logo" class="brand" href="/" rel="tooltip" data-placement="bottom" data-original-title="{{SITE_TITLE}}"><span class="lightgreen">Django</span><span class="lightorange">ware</span></a>
             <div class="nav-collapse collapse">
                 <ul class="nav pull-left">
                     {% with request|header_menu_left as menu %}
