--- a/www/templates/admin/base.html
+++ b/www/templates/admin/base.html
@@ -69,7 +69,7 @@
 </div>
 <!-- END Container -->
 
-{% include "base/gist/tinymce.html" %}
+{% include "base/utils/tinymce.html" %}
 
 </body>
 </html>
