--- a/www/templates/base/base.html
+++ b/www/templates/base/base.html
@@ -1,11 +1,11 @@
 {% extends "base/frame.html" %}
 
 {% block www_bd_hdr_menu %}
-    {% include "base/gist/bd_hdr_menu.html" %}
+    {% include "base/body/header.html" %}
 {% endblock www_bd_hdr_menu %}
 
 {% block www_bd_footer %}
-    {% include "base/gist/bd_ftr_menu.html" %}
+    {% include "base/body/footer.html" %}
 {% endblock www_bd_footer %}
 
 {% block www_notifications %}
