--- a/www/templates/base/utils/form_generic.html
+++ b/www/templates/base/utils/form_generic.html
@@ -1,4 +1,4 @@
-{# called like: {% include "base/gist/form_generic.html" with form=form %} #}
+{# called like: {% include "base/utils/form_generic.html" with form=form %} #}
 
 {# Include CSRF #}
 {% csrf_token %}
