--- a/www/templates/base/utils/tinymce.html
+++ b/www/templates/base/utils/tinymce.html
@@ -1,4 +1,4 @@
-<script>document.domain = '{{SITE_OBJECT.domain}}';</script>
+<script>document.domain = '{{SITE_OBJECT_CURRENT.domain}}';</script>
 <script type="text/javascript" src="{{STATIC_URL}}common/js/tiny_mce/tiny_mce.js"></script>
 <script>
 
