--- a/www/templates/user/password_change_form.html
+++ b/www/templates/user/password_change_form.html
@@ -16,7 +16,7 @@
                     </fieldset>
                     <input class="btn" type="submit" value="{% trans "Change Password" %}" />
                     <span class="form_alternate_suggestions pull-right">
-                        <a class="info" href="{% url 'user_password_reset' %}">Forgot Password</a>
+                        <a class="info" href="{% url 'userware_password_reset' %}">Forgot Password</a>
                     </span>
                 </form>
                 <div class="popover_info_box popover_small pull-left">
