--- a/www/templates/user/password_reset_complete.html
+++ b/www/templates/user/password_reset_complete.html
@@ -12,7 +12,7 @@
                 <p>
                     {% trans "Your password has been set. You may go ahead and log in with your new password now." %}.
                     <div class="btn-group pull-right">
-                        <a class="btn" href="{% url 'site_user_login' %}">Login</a>
+                        <a class="btn" href="{% url 'userware_login' %}">Login</a>
                     </div>
                 </p>
             </li>
