--- a/www/templates/user/password_reset_confirm.html
+++ b/www/templates/user/password_reset_confirm.html
@@ -20,7 +20,7 @@
                 {% else %}
                     <p>{% trans "This password reset link has already been used. You forgot your password again?" %}</p>
                     <div class="pull-right">
-                        <a class="btn" href="{% url 'user_password_reset' %}">Reset password again</a>
+                        <a class="btn" href="{% url 'userware_password_reset' %}">Reset password again</a>
                     </div>
                 {% endif %}
             </li>
