added contactware app

--- a/www/templates/base/frame.html
+++ b/www/templates/base/frame.html
@@ -10,7 +10,7 @@
 
                 {% block www_hd_meta %}
                     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-                    <meta name="author" content="{{SITE_ORG}}">
+                    <meta name="author" content="{{SITE_ORGANIZATION}}">
                     <meta name="Copyright" content="{{SITE_DOMAIN}}">
                     <meta name="viewport" content="width=1024">
                     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7, IE=9">
