--- a/asset/static/css/style.css
+++ b/asset/static/css/style.css
@@ -386,6 +386,7 @@ label {
 
 .form-horizontal input[type=text],
 .form-horizontal input[type=password],
+.form-horizontal input[type=email],
 .form-horizontal input[type=file],
 .form-horizontal textarea,
 .form-horizontal span.editable {
@@ -1221,6 +1222,7 @@ label {
 .search_form_horizontal input[type=text],
 .search_form_horizontal input[type=password],
 .search_form_horizontal input[type=file],
+.search_form_horizontal input[type=email],
 .search_form_horizontal textarea,
 .search_form_horizontal select,
 .search_form_horizontal span.editable {
