--- a/www/templates/user/account.html
+++ b/www/templates/user/account.html
@@ -47,30 +47,11 @@
     </div>
 {% endif %}
 
-<ul id="trac" class="account">
-    <li>
-        <a href="{% url 'profileware_stats_management' 'follow' %}">
-            <strong class="tracker" id="following">{{request.user.profile.following}}</strong> <span>following</span>
-        </a>
-    </li>
-    <li>
-        <a href="{% url 'profileware_stats_management' 'like' %}">
-            <strong class="tracker" id="liked">{{request.user.profile.liked}}</strong> <span>liked</span>
-        </a>
-    </li>
-    <li>
-        <a href="{% url 'profileware_stats_management' 'bookmark' %}">
-            <strong class="tracker" id="bookmarked">{{request.user.profile.bookmarked}}</strong> <span>bookmarked</span>
-        </a>
-    </li>
-</ul>
-
 <div class="public_view_link">
-    {% if request.user.profile.username %}
+    {% if request.user.username %}
         <a class="btn info" href="{% url 'member_profile_view' request.user.profile.username %}">view your public profile</a>
     {% endif %}
 </div>
-
 
 
 {% endblock www_content_box_1 %}
