update contact stuff

--- a/www/templates/user/password_change_form.html
+++ b/www/templates/user/password_change_form.html
@@ -22,7 +22,7 @@
                 <div class="popover_info_box popover_small pull-left">
                     <div rel="popover" data-original-title="Password Change ( security )" data-trigger="hover" data-placement="right"
                         data-content="If you feel that you need to change password, then you can do it here. For your security, changing password will
-                                      log you out of all of your other sessions"
+                                      log you out of all your other sessions"
                       <i class="icon-info-sign icon-large center info"></i>
                     </div>
                 </div>
