--- a/www/templates/user/login_form.html
+++ b/www/templates/user/login_form.html
@@ -16,7 +16,7 @@
                     </fieldset>
                     <input class="btn" type="submit" value="{% trans "Login" %}" />
                     <span class="form_alternate_suggestions pull-right">
-                        <a class="info" href="{% url 'userware_password_reset' %}">Forgot Password</a>&nbsp;
+                        <a rel="tooltip" data-placement="bottom" data-original-title="get a new password"  class="info" href="{% url 'userware_password_reset' %}">Forgot Password</a>&nbsp;
                     </span>
                 </form>
             </li>
