--- a/www/templates/user/password_change_form.html
+++ b/www/templates/user/password_change_form.html
@@ -8,7 +8,7 @@
     <div class="title">Password Change<i class="icon-key pull-right"></i></div>
     <div class="group_inner_box">
         <ul class="group_list">
-            <li class="clearfix">
+            <li class="clearfix nohover">
                 <form class="form-horizontal"  action="" enctype="multipart/form-data" method="post" accept-charset="utf-8">
                     {% csrf_token %}
                     <fieldset>
@@ -19,12 +19,15 @@
                         <a class="info" href="{% url 'userware_password_reset' %}">Forgot Password</a>
                     </span>
                 </form>
-                <div class="popover_info_box popover_small pull-left">
-                    <div rel="popover" data-original-title="Password Change ( security )" data-trigger="hover" data-placement="right"
-                        data-content="If you feel that you need to change password, then you can do it here. For your security, changing password will
-                                      log you out of all your other sessions"
-                      <i class="icon-info-sign icon-large center info"></i>
-                    </div>
+            </li>
+            <li class="clearfix nohover">
+                <div class="pull-left">
+                    <i class="icon-hand-right info"></i>
+                    To keep your account secure, we can log you out on all other devices. You can log back in with your new password.
+                    <br/>
+                    <i class="icon-hand-right red"></i>
+                    If you feel that your account is <span class="red bold">hacked</span>, then you should select <span class="bold red">"Log me out of other devices"</span>.
+                    <br/>
                 </div>
                 <div class="pull-right">{% include "base/utils/problem_feature.html" %}</div>
             </li>
