--- a/www/templates/user/password_reset_complete.html
+++ b/www/templates/user/password_reset_complete.html
@@ -11,7 +11,7 @@
             <li class="clearfix">
                 <p>
                     {% trans "Your password has been set. You may go ahead and log in with your new password now." %}.
-                    <div class="btn-group pull-right">
+                    <div class="btn-group pull-left">
                         <a class="btn" href="{% url 'userware_login' %}">Login</a>
                     </div>
                 </p>
