--- a/www/templates/user/password_reset_confirm.html
+++ b/www/templates/user/password_reset_confirm.html
@@ -19,7 +19,7 @@
                     </form>
                 {% else %}
                     <p>{% trans "This password reset link has already been used. You forgot your password again?" %}</p>
-                    <div class="pull-right">
+                    <div class="pull-left">
                         <a class="btn" href="{% url 'userware_password_reset' %}">Reset password again</a>
                     </div>
                 {% endif %}
