--- a/www/templates/user/password_change_form.html
+++ b/www/templates/user/password_change_form.html
@@ -1,11 +1,11 @@
 {% extends "user/account.html" %}
 
-{% block www_hd_title %}{% trans "Account Settings » Password Change" %}{% endblock www_hd_title %}
+{% block www_hd_title %}{% trans "Account Settings » Change Password" %}{% endblock www_hd_title %}
 
 {% block www_content_box_2 %}
 
 <div class="group_outter_box">
-    <div class="title">Password Change<i class="icon-key pull-right"></i></div>
+    <div class="title">Change Password<i class="icon-key pull-right"></i></div>
     <div class="group_inner_box">
         <ul class="group_list">
             <li class="clearfix nohover">
