--- a/www/templates/user/password_change_form.html
+++ b/www/templates/user/password_change_form.html
@@ -20,15 +20,12 @@
                     </span>
                 </form>
             </li>
-            <li class="clearfix nohover">
-                <div class="pull-left">
-                    <i class="icon-hand-right info"></i>
-                    To keep your account secure, we can log you out of any other devices. You can log back in with your new password.
-                    <br/>
-                    <i class="icon-hand-right red"></i>
-                    If you feel that your account is <span class="red bold">hacked</span>, then you should select <span class="bold red">"Log me out of other devices"</span>.
-                    <br/>
-                </div>
+            <li class="clearfix">
+                <i class="icon-hand-right info"></i>
+                To keep your account secure, we can log you out of any other devices. You can log back in with your new password.
+                <br/>
+                <i class="icon-hand-right red"></i>
+                If you feel that your account is <span class="red bold">hacked</span>, then you should select <span class="bold red">"Log me out of other devices"</span>.
                 <div class="pull-right">{% include "base/utils/problem_feature.html" %}</div>
             </li>
         </ul>
