--- a/www/templates/user/delete_account_form.html
+++ b/www/templates/user/delete_account_form.html
@@ -20,7 +20,7 @@
     <div class="title dangerzone">Delete Account Permanently<i class="icon-warning-sign pull-right"></i></div>
     <div class="group_inner_box">
         <ul class="group_list">
-            <li class="clearfix">
+            <li class="clearfix nohover">
                 <form class="form-horizontal"  action="" enctype="multipart/form-data" method="post" accept-charset="utf-8">
                     {% csrf_token %}
                     <fieldset>
@@ -28,15 +28,14 @@
                     </fieldset>
                     <button type="submit" class="btn danger">Delete my account</button>
                 </form>
-                <div class="popover_info_box popover_medium pull-left">
-                    <div rel="popover" data-original-title="Deleting Your Account ( permanently )" data-trigger="hover" data-placement="right"
-                        data-content="Do you want to delete your account? Why not consider disabling it instead? This way it would be private so
-                                      no one can see it and if later on you change your mind, you can just re-enable it without losing your data.<br/>
-                                      <strong class='danger'>Note: </strong> Account deletion is immediate and permanent. If you decided to come back later, then you must
-                                      create a new account again and your old username may no longer be available to you."
-                      <i class="icon-info-sign icon-large center info"></i>
-                    </div>
-                </div>
+            </li>
+            <li class="clearfix">
+                <i class="icon-hand-right info"></i>
+                Do you want to delete your account? Why not consider disabling it instead? This way it would be private so
+                no one can see it and if later on you change your mind, you can just re-enable it without losing your data.<br/>
+                <i class="icon-hand-right red"></i>
+                Please note that account deletion is immediate and permanent. If you decided to come back later, then you must
+                create a new account again and your old username may no longer be available to you.
                 <div class="pull-right">{% include "base/utils/problem_feature.html" %}</div>
             </li>
         </ul>
