same look & feel for su page

--- a/www/templates/user/switch_user_form.html
+++ b/www/templates/user/switch_user_form.html
@@ -8,7 +8,7 @@
     <div class="title">Switch User<i class="icon-group pull-right"></i></div>
     <div class="group_inner_box">
         <ul class="group_list">
-            <li class="clearfix">
+            <li class="clearfix nohover">
                 <form class="form-horizontal"  action="" enctype="multipart/form-data" method="post" accept-charset="utf-8">
                     {% csrf_token %}
                     <fieldset>
@@ -16,6 +16,12 @@
                     </fieldset>
                     <button type="submit" class="btn">Switch User</button>
                 </form>
+            </li>
+            <li class="clearfix">
+                <i class="icon-hand-right info"></i>
+                This page is meant to be used by privileged users. You can switch into any account using the above form.<br/>
+                <i class="icon-hand-right red"></i>
+                Be careful who you share your superuser account credentials with.
                 <div class="pull-right">{% include "base/utils/problem_feature.html" %}</div>
             </li>
         </ul>
