warning color match

--- a/www/templates/user/password_change_form.html
+++ b/www/templates/user/password_change_form.html
@@ -25,7 +25,7 @@
                 To keep your account secure, we can log you out of any other devices. You can log back in with your new password.
                 <br/>
                 <i class="icon-hand-right red"></i>
-                If you feel that your account is <span class="red bold">hacked</span>, then you should select <span class="bold red">"Log me out of other devices"</span>.
+                If you feel that your account is <span class="red bold">hacked</span>, then you should select <span class="bold black">"Log me out of other devices"</span>.
                 <div class="pull-right">{% include "base/utils/problem_feature.html" %}</div>
             </li>
         </ul>
