--- a/www/templates/base/utils/problem_feature.html
+++ b/www/templates/base/utils/problem_feature.html
@@ -1,7 +1,7 @@
 <span class="">
     <a rel="tooltip" data-placement="bottom" data-original-title="report problems request features" 
     class="send_page_title info" href="{% url 'contact_form' %}">
-        <i class="icon-flag attention"></i>
+        <i class="fa fa-flag attention"></i>
     </a>
 </span>
 
