--- a/www/templates/profile/preferences_update_form.html
+++ b/www/templates/profile/preferences_update_form.html
@@ -5,7 +5,7 @@
 {% block www_content_box_2 %}
 
 <div class="group_outter_box">
-    <div class="title">Account Preferences<i class="icon-cogs pull-right"></i></div>
+    <div class="title">Account Preferences<i class="fa fa-cogs pull-right"></i></div>
     <div class="group_inner_box">
         <ul class="group_list">
             <li class="clearfix nohover">
@@ -18,7 +18,7 @@
                 </form>
             </li>
             <li class="clearfix">
-                <i class="icon-hand-right info"></i>
+                <i class="fa fa-hand-right info"></i>
                 This is your account preference section. Set your preferences based on your needs.
                 <div class="pull-right">{% include "base/utils/problem_feature.html" %}</div>
             </li>
