--- a/www/templates/user/password_change_form.html
+++ b/www/templates/user/password_change_form.html
@@ -5,7 +5,7 @@
 {% block www_content_box_2 %}
 
 <div class="group_outter_box">
-    <div class="title">Change Password<i class="icon-key pull-right"></i></div>
+    <div class="title">Change Password<i class="fa fa-key pull-right"></i></div>
     <div class="group_inner_box">
         <ul class="group_list">
             <li class="clearfix nohover">
@@ -21,10 +21,10 @@
                 </form>
             </li>
             <li class="clearfix">
-                <i class="icon-hand-right info"></i>
+                <i class="fa fa-hand-right info"></i>
                 To keep your account secure, we can log you out of any other devices. You can log back in with your new password.
                 <br/>
-                <i class="icon-hand-right red"></i>
+                <i class="fa fa-hand-right red"></i>
                 If you feel that your account is <span class="red bold">hacked</span>, then you should select <span class="bold black">"Log me out of other devices"</span>.
                 <div class="pull-right">{% include "base/utils/problem_feature.html" %}</div>
             </li>
