--- a/www/templates/user/switch_user_form.html
+++ b/www/templates/user/switch_user_form.html
@@ -5,7 +5,7 @@
 {% block www_content_box_2 %}
 
 <div class="group_outter_box">
-    <div class="title">Switch User<i class="icon-group pull-right"></i></div>
+    <div class="title">Switch User<i class="fa fa-group pull-right"></i></div>
     <div class="group_inner_box">
         <ul class="group_list">
             <li class="clearfix nohover">
@@ -18,9 +18,9 @@
                 </form>
             </li>
             <li class="clearfix">
-                <i class="icon-hand-right info"></i>
+                <i class="fa fa-hand-right info"></i>
                 This page is meant to be used by privileged users. You can switch into any account using the above form.<br/>
-                <i class="icon-hand-right red"></i>
+                <i class="fa fa-hand-right red"></i>
                 Be careful who you share your superuser account credentials with.
                 <div class="pull-right">{% include "base/utils/problem_feature.html" %}</div>
             </li>
