--- a/www/templates/404.html
+++ b/www/templates/404.html
@@ -5,7 +5,7 @@
 {% block www_content_box_1 %}
 
 <div class="group_outter_box center form_box_centered">
-    <div class="title">Page Not Found ( 404 )<i class="icon-warning-sign pull-right"></i></div>
+    <div class="title">Page Not Found ( 404 )<i class="fa fa-warning-sign pull-right"></i></div>
     <div class="group_inner_box">
         <ul class="group_list">
             <li class="clearfix">
