--- a/www/templates/contact/contact_form.html
+++ b/www/templates/contact/contact_form.html
@@ -5,7 +5,7 @@
 {% block www_content_box_1 %}
 
 <div class="group_outter_box center form_box_centered">
-    <div class="title">Contact Us<i class="icon-edit pull-right"></i></div>
+    <div class="title">Contact Us<i class="fa fa-edit pull-right"></i></div>
     <div class="group_inner_box">
         <ul class="group_list">
             <li class="clearfix">
