--- a/www/templates/entrance/punch_line.html
+++ b/www/templates/entrance/punch_line.html
@@ -4,12 +4,12 @@
         <span>{{SITE_NAME}} is a Social Hub for Python and Django Developers - a place to meet the experts.</span>
 
         <ul class="feature_list">
-            <li><i class="icon-check green"></i> Signup for personal and/or business accounts.</li>
-            <li><i class="icon-check green"></i> Easily search for experts locally or globally - List & Map Views.</li>
-            <li><i class="icon-check green"></i> Social engagements. Follow and/or Like people or companies.</li>
-            <li><i class="icon-check green"></i> Social authentication for secure login without a password.</li>
-            <li><i class="icon-check green"></i> Link up your existing social profiles for maximum exposure.</li>
-            <li><i class="icon-check green"></i> Getting an account is secure and 100% free. <a href="{% url 'signup_form_process' %}" class="green" title="Try It Out">Try it out</a>.</li>
+            <li><i class="fa fa-check green"></i> Signup for personal and/or business accounts.</li>
+            <li><i class="fa fa-check green"></i> Easily search for experts locally or globally - List & Map Views.</li>
+            <li><i class="fa fa-check green"></i> Social engagements. Follow and/or Like people or companies.</li>
+            <li><i class="fa fa-check green"></i> Social authentication for secure login without a password.</li>
+            <li><i class="fa fa-check green"></i> Link up your existing social profiles for maximum exposure.</li>
+            <li><i class="fa fa-check green"></i> Getting an account is secure and 100% free. <a href="{% url 'signup_form_process' %}" class="green" title="Try It Out">Try it out</a>.</li>
         </ul>
   
     </div> 
