--- a/www/templates/profile/personal_update_form.html
+++ b/www/templates/profile/personal_update_form.html
@@ -5,7 +5,7 @@
 {% block www_content_box_2 %}
 
 <div class="group_outter_box">
-    <div class="title">Personal Details<i class="icon-user pull-right"></i></div>
+    <div class="title">Personal Details<i class="fa fa-user pull-right"></i></div>
     <div class="group_inner_box">
         <ul class="group_list">
             <li class="clearfix nohover">
@@ -18,7 +18,7 @@
                 </form>
             </li>
             <li class="clearfix">
-                <i class="icon-hand-right info"></i>
+                <i class="fa fa-hand-o-right info"></i>
                 This is your personal details section. Your name is required, however you are encouraged to fill out as much details about you as possible.
                 <div class="pull-right">{% include "base/utils/problem_feature.html" %}</div>
             </li>
