--- a/www/templates/user/delete_account_form.html
+++ b/www/templates/user/delete_account_form.html
@@ -5,19 +5,19 @@
 {% block www_content_box_2 %}
 
 <div class="group_outter_box">
-    <div class="title">Delete Account <span class="text">( {{user.username}} )</span><i class="icon-trash pull-right danger"></i></div>
+    <div class="title">Delete Account <span class="text">( {{user.username}} )</span><i class="fa fa-trash-o pull-right danger"></i></div>
     <div class="group_inner_box">
         <ul class="group_list">
             <li class="clearfix">
                 <h4>Make sure you know what you are doing!</h4>
-                <p><i class="icon-warning-sign icon-large danger"></i>&nbsp;&nbsp;Please review the <a class="info" href="{% url 'terms_of_service' %}">Terms of Service</a> regarding account deletion.</p>
+                <p><i class="fa fa-warning-sign fa fa-large danger"></i>&nbsp;&nbsp;Please review the <a class="info" href="{% url 'terms_of_service' %}">Terms of Service</a> regarding account deletion.</p>
             </li>
         </ul>
     </div>
 </div>
 
 <div class="group_outter_box">
-    <div class="title dangerzone">Delete Account Permanently<i class="icon-warning-sign pull-right"></i></div>
+    <div class="title dangerzone">Delete Account Permanently<i class="fa fa-warning-sign pull-right"></i></div>
     <div class="group_inner_box">
         <ul class="group_list">
             <li class="clearfix nohover">
@@ -30,10 +30,10 @@
                 </form>
             </li>
             <li class="clearfix">
-                <i class="icon-hand-right info"></i>
+                <i class="fa fa-hand-right info"></i>
                 Do you want to delete your account? Why not consider disabling it instead? This way it would be private so
                 no one can see it and if later on you change your mind, you can just re-enable it without losing your data.<br/>
-                <i class="icon-hand-right red"></i>
+                <i class="fa fa-hand-right red"></i>
                 Please note that account deletion is immediate and permanent. If you decided to come back later, then you must
                 create a new account again and your old username may no longer be available to you.
                 <div class="pull-right">{% include "base/utils/problem_feature.html" %}</div>
