--- a/www/templates/user/password_reset_done.html
+++ b/www/templates/user/password_reset_done.html
@@ -5,7 +5,7 @@
 {% block www_content_box_1 %}
 
 <div class="group_outter_box center form_box_centered">
-    <div class="title">Password Reset Requested<i class="icon-share-alt pull-right"></i></div>
+    <div class="title">Password Reset Requested<i class="fa fa-share-alt pull-right"></i></div>
     <div class="group_inner_box">
         <ul class="group_list">
             <li class="clearfix">
