--- a/www/templates/profile/personal_update_form.html
+++ b/www/templates/profile/personal_update_form.html
@@ -19,7 +19,7 @@
             </li>
             <li class="clearfix">
                 <i class="fa fa-hand-o-right info"></i>
-                This is your personal details section. Your name is required, however you are encouraged to fill out as much details about you as possible.
+                This is your personal details section. Your are encouraged to fill out as much details as possible.
                 <div class="pull-right">{% include "base/utils/problem_feature.html" %}</div>
             </li>
         </ul>
