--- a/www/templates/profile/preferences_update_form.html
+++ b/www/templates/profile/preferences_update_form.html
@@ -18,7 +18,7 @@
                 </form>
             </li>
             <li class="clearfix">
-                <i class="fa fa-hand-right info"></i>
+                <i class="fa fa-hand-o-right info"></i>
                 This is your account preference section. Set your preferences based on your needs.
                 <div class="pull-right">{% include "base/utils/problem_feature.html" %}</div>
             </li>
