--- a/www/templates/user/switch_user_form.html
+++ b/www/templates/user/switch_user_form.html
@@ -18,9 +18,9 @@
                 </form>
             </li>
             <li class="clearfix">
-                <i class="fa fa-hand-right info"></i>
+                <i class="fa fa-hand-o-right info"></i>
                 This page is meant to be used by privileged users. You can switch into any account using the above form.<br/>
-                <i class="fa fa-hand-right red"></i>
+                <i class="fa fa-hand-o-right red"></i>
                 Be careful who you share your superuser account credentials with.
                 <div class="pull-right">{% include "base/utils/problem_feature.html" %}</div>
             </li>
