display volume count on collection browse page [#67572524]; collection view page with paginated volume list [#67572876]

--- a/readux/collection/templates/collection/browse.html
+++ b/readux/collection/templates/collection/browse.html
@@ -1,5 +1,7 @@
 {% extends 'site_base.html' %}
 
+{% block page-subtitle %}| Collections{% endblock %}
+
 {% block content %}
 <div class="container">
     <header class="page-header">
@@ -8,7 +10,7 @@
     <section>
         <div class="container">
             <ul class="media-list collection-list">
-                {% for coll in collections %}
+                {% for coll, count in collections %}
                     {% include 'collection/snippets/list_collection.html' %}
                 {% endfor %}
             </ul>
